--- a/react/Radio/Radio.demo.less
+++ b/react/Radio/Radio.demo.less
@@ -1,6 +1,7 @@
 .root {
   display: flex;
   flex-direction: column;
+  width: 175px;
 
   > :global(*) {
     min-width: 150px; // :(
